--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -15,12 +15,12 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小鹿乃",
+  "eat-kano": "偷几把",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
-  "game-intro1": "从最底下的开始",
-  "game-intro2": "看你能得多少分",
+  "game-title": "几把个游戏",
+  "game-intro1": "看看能不能那袋几把",
+  "game-intro2": "看你能不能拿到几把",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
   "time-up": "时间到",
@@ -31,8 +31,8 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
+  "text-level-1": "你没有拿到几把",
+  "text-level-2": "你还是没有拿到几把",
   "text-level-3": "TQL",
   "text-level-4": "您",
   "text-level-5": "人?",
@@ -43,7 +43,7 @@
   "week-rank": "排行榜[周]",
   "month-rank": "排行榜[月]",
   "all-rank": "排行榜[总]",
-  "navbar-brand": "吃掉小鹿乃-排行榜",
+  "navbar-brand": "偷几把-排行榜",
   "daily-ranking": "日榜",
   "weekly-ranking": "周榜",
   "monthly-ranking": "月榜",
