--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -22,7 +22,7 @@
   "game-intro1": "从最底下的开始",
   "game-intro2": "看你能得多少分",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
-  "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
+  "no-ad-bad-lang": "广告死ma",
   "time-up": "时间到",
   "calculating": "计算中",
   "score": "得分",
